Continued http/https separation

--- a/public/rr-http.html
+++ b/public/rr-http.html
@@ -51,12 +51,6 @@
     <!-- Provide WSAvcPlayer -->
     <script type="text/javascript" src="http-live-player.js"></script>
     <!-- Provide Clientside Scripts -->
-    <script type="text/javascript" src="../general.js"></script>
-    <script type="module" src="/scripts/index-rr.js"></script>
-
-    <!-- If attempting to Minify/WebPack the scripts; TODO.
-    <script type="text/javascript" src="../general.js"></script>
-    <script type="module" src="./scripts/bundle-rr.js"></script>
-    -->
+    <script type="module" src="/scripts/index-rr-http.js"></script>
   </body>
 </html>
